parser.output
Terminals unused in grammar

    TK_PR_THEN
    TK_PR_FOREACH
    TK_PR_SWITCH
    TK_PR_CASE
    TK_PR_CLASS
    TK_PR_PRIVATE
    TK_PR_PUBLIC
    TK_PR_PROTECTED
    TK_PR_END
    TK_PR_DEFAULT
    TOKEN_ERRO
    '~'
    "<="


State 96 conflicts: 2 shift/reduce
State 97 conflicts: 2 shift/reduce
State 98 conflicts: 2 shift/reduce
State 99 conflicts: 2 shift/reduce
State 100 conflicts: 2 shift/reduce
State 102 conflicts: 17 shift/reduce
State 149 conflicts: 2 shift/reduce
State 150 conflicts: 2 shift/reduce
State 151 conflicts: 2 shift/reduce
State 152 conflicts: 2 shift/reduce
State 153 conflicts: 17 shift/reduce
State 154 conflicts: 17 shift/reduce
State 155 conflicts: 2 shift/reduce
State 156 conflicts: 2 shift/reduce
State 157 conflicts: 2 shift/reduce
State 158 conflicts: 2 shift/reduce
State 159 conflicts: 2 shift/reduce
State 160 conflicts: 2 shift/reduce
State 161 conflicts: 2 shift/reduce
State 162 conflicts: 2 shift/reduce
State 163 conflicts: 2 shift/reduce
State 164 conflicts: 2 shift/reduce
State 196 conflicts: 2 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: decl

    2 decl: varglobal decl
    3     | func decl
    4     | %empty

    5 varglobal: tipo TK_IDENTIFICADOR lista
    6          | tipo TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'

    7 tipo: static TK_PR_BOOL
    8     | static TK_PR_CHAR
    9     | static TK_PR_FLOAT
   10     | static TK_PR_INT
   11     | static TK_PR_STRING

   12 static: TK_PR_STATIC
   13       | %empty

   14 lista: ',' TK_IDENTIFICADOR lista
   15      | ';'

   16 func: cabecalho corpo

   17 cabecalho: tipo TK_IDENTIFICADOR '(' param ')'

   18 param: const tipo TK_IDENTIFICADOR lista_parametros
   19      | %empty

   20 lista_parametros: ',' const tipo TK_IDENTIFICADOR lista_parametros
   21                 | %empty

   22 const: TK_PR_CONST
   23      | %empty

   24 corpo: '{' comando '}'

   25 comando: varlocal ';' comando
   26        | TK_IDENTIFICADOR '=' expr ';' comando
   27        | TK_IDENTIFICADOR '[' expr ']' '=' expr ';' comando
   28        | TK_PR_RETURN expr ';' comando
   29        | TK_PR_INPUT TK_IDENTIFICADOR ';' comando
   30        | TK_PR_OUTPUT saida ';' comando
   31        | shift ';' comando
   32        | TK_IDENTIFICADOR '(' expr ')' ';'
   33        | TK_PR_BREAK ';' comando
   34        | TK_PR_CONTINUE ';'
   35        | fluxo ';' comando
   36        | corpo ';' comando
   37        | %empty

   38 varlocal: static const tipo2 TK_IDENTIFICADOR lista_varlocal
   39         | static const tipo2 TK_IDENTIFICADOR '<' '=' TK_IDENTIFICADOR
   40         | static const tipo2 TK_IDENTIFICADOR '<' '=' lit

   41 tipo2: TK_PR_BOOL
   42      | TK_PR_CHAR
   43      | TK_PR_FLOAT
   44      | TK_PR_INT
   45      | TK_PR_STRING

   46 lista_varlocal: ',' TK_IDENTIFICADOR lista_varlocal
   47               | %empty

   48 saida: TK_IDENTIFICADOR
   49      | lit

   50 shift: TK_IDENTIFICADOR TK_OC_SR TK_LIT_INT
   51      | TK_IDENTIFICADOR '[' expr ']' TK_OC_SR TK_LIT_INT
   52      | TK_IDENTIFICADOR TK_OC_SL TK_LIT_INT
   53      | TK_IDENTIFICADOR '[' expr ']' TK_OC_SL TK_LIT_INT

   54 fluxo: TK_PR_IF '(' expr ')' corpo
   55      | TK_PR_IF '(' expr ')' corpo TK_PR_ELSE corpo
   56      | TK_PR_FOR '(' atrib_for ':' expr ':' atrib_for ')' corpo
   57      | TK_PR_WHILE '(' expr ')' TK_PR_DO corpo

   58 atrib_for: TK_IDENTIFICADOR '=' expr

   59 expr: TK_IDENTIFICADOR
   60     | TK_IDENTIFICADOR '[' expr ']'
   61     | lit_num
   62     | TK_IDENTIFICADOR '(' expr_pr ')'
   63     | '(' expr ')'
   64     | bool
   65     | '+' expr
   66     | '-' expr
   67     | '!' expr
   68     | '&' expr
   69     | '*' expr
   70     | '#' expr
   71     | expr '+' expr
   72     | expr '-' expr
   73     | expr '*' expr
   74     | expr '/' expr
   75     | expr '%' expr
   76     | expr '<' expr
   77     | expr '>' expr
   78     | expr '|' expr
   79     | expr '&' expr
   80     | expr '^' expr
   81     | expr TK_OC_OR expr
   82     | expr TK_OC_AND expr
   83     | expr TK_OC_LE expr
   84     | expr TK_OC_GE expr
   85     | expr TK_OC_EQ expr
   86     | expr TK_OC_NE expr
   87     | expr '?' expr ':' expr

   88 expr_pr: expr expr_pr_lst

   89 expr_pr_lst: ',' expr expr_pr_lst
   90            | %empty

   91 lit: TK_LIT_INT
   92    | TK_LIT_FLOAT
   93    | TK_LIT_FALSE
   94    | TK_LIT_TRUE
   95    | TK_LIT_CHAR
   96    | TK_LIT_STRING

   97 lit_num: TK_LIT_INT
   98        | TK_LIT_FLOAT

   99 bool: TK_LIT_TRUE
  100     | TK_LIT_FALSE


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 67
    '#' (35) 70
    '%' (37) 75
    '&' (38) 68 79
    '(' (40) 17 32 54 55 56 57 62 63
    ')' (41) 17 32 54 55 56 57 62 63
    '*' (42) 69 73
    '+' (43) 65 71
    ',' (44) 14 20 46 89
    '-' (45) 66 72
    '/' (47) 74
    ':' (58) 56 87
    ';' (59) 6 15 25 26 27 28 29 30 31 32 33 34 35 36
    '<' (60) 39 40 76
    '=' (61) 26 27 39 40 58
    '>' (62) 77
    '?' (63) 87
    '[' (91) 6 27 51 53 60
    ']' (93) 6 27 51 53 60
    '^' (94) 80
    '{' (123) 24
    '|' (124) 78
    '}' (125) 24
    '~' (126)
    error (256)
    TK_PR_INT (258) 10 44
    TK_PR_FLOAT (259) 9 43
    TK_PR_BOOL (260) 7 41
    TK_PR_CHAR (261) 8 42
    TK_PR_STRING (262) 11 45
    TK_PR_IF (263) 54 55
    TK_PR_THEN (264)
    TK_PR_ELSE (265) 55
    TK_PR_WHILE (266) 57
    TK_PR_DO (267) 57
    TK_PR_INPUT (268) 29
    TK_PR_OUTPUT (269) 30
    TK_PR_RETURN (270) 28
    TK_PR_CONST (271) 22
    TK_PR_STATIC (272) 12
    TK_PR_FOREACH (273)
    TK_PR_FOR (274) 56
    TK_PR_SWITCH (275)
    TK_PR_CASE (276)
    TK_PR_BREAK (277) 33
    TK_PR_CONTINUE (278) 34
    TK_PR_CLASS (279)
    TK_PR_PRIVATE (280)
    TK_PR_PUBLIC (281)
    TK_PR_PROTECTED (282)
    TK_PR_END (283)
    TK_PR_DEFAULT (284)
    TK_OC_LE (285) 83
    TK_OC_GE (286) 84
    TK_OC_EQ (287) 85
    TK_OC_NE (288) 86
    TK_OC_AND (289) 82
    TK_OC_OR (290) 81
    TK_OC_SL (291) 52 53
    TK_OC_SR (292) 50 51
    TK_LIT_INT (293) 6 50 51 52 53 91 97
    TK_LIT_FLOAT (294) 92 98
    TK_LIT_FALSE (295) 93 100
    TK_LIT_TRUE (296) 94 99
    TK_LIT_CHAR (297) 95
    TK_LIT_STRING (298) 96
    TK_IDENTIFICADOR (299) 5 6 14 17 18 20 26 27 29 32 38 39 40 46 48 50 51 52 53 58 59 60 62
    TOKEN_ERRO (300)
    "<=" (301)


Nonterminals, with rules where they appear

    $accept (71)
        on left: 0
    programa (72)
        on left: 1
        on right: 0
    decl (73)
        on left: 2 3 4
        on right: 1 2 3
    varglobal (74)
        on left: 5 6
        on right: 2
    tipo (75)
        on left: 7 8 9 10 11
        on right: 5 6 17 18 20
    static (76)
        on left: 12 13
        on right: 7 8 9 10 11 38 39 40
    lista (77)
        on left: 14 15
        on right: 5 14
    func (78)
        on left: 16
        on right: 3
    cabecalho (79)
        on left: 17
        on right: 16
    param (80)
        on left: 18 19
        on right: 17
    lista_parametros (81)
        on left: 20 21
        on right: 18 20
    const (82)
        on left: 22 23
        on right: 18 20 38 39 40
    corpo (83)
        on left: 24
        on right: 16 36 54 55 56 57
    comando (84)
        on left: 25 26 27 28 29 30 31 32 33 34 35 36 37
        on right: 24 25 26 27 28 29 30 31 33 35 36
    varlocal (85)
        on left: 38 39 40
        on right: 25
    tipo2 (86)
        on left: 41 42 43 44 45
        on right: 38 39 40
    lista_varlocal (87)
        on left: 46 47
        on right: 38 46
    saida (88)
        on left: 48 49
        on right: 30
    shift (89)
        on left: 50 51 52 53
        on right: 31
    fluxo (90)
        on left: 54 55 56 57
        on right: 35
    atrib_for (91)
        on left: 58
        on right: 56
    expr (92)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87
        on right: 26 27 28 32 51 53 54 55 56 57 58 60 63 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89
    expr_pr (93)
        on left: 88
        on right: 62
    expr_pr_lst (94)
        on left: 89 90
        on right: 88 89
    lit (95)
        on left: 91 92 93 94 95 96
        on right: 40 49
    lit_num (96)
        on left: 97 98
        on right: 61
    bool (97)
        on left: 99 100
        on right: 64


State 0

    0 $accept: . programa $end
    1 programa: . decl
    2 decl: . varglobal decl
    3     | . func decl
    4     | . %empty  [$end]
    5 varglobal: . tipo TK_IDENTIFICADOR lista
    6          | . tipo TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'
    7 tipo: . static TK_PR_BOOL
    8     | . static TK_PR_CHAR
    9     | . static TK_PR_FLOAT
   10     | . static TK_PR_INT
   11     | . static TK_PR_STRING
   12 static: . TK_PR_STATIC
   13       | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING]
   16 func: . cabecalho corpo
   17 cabecalho: . tipo TK_IDENTIFICADOR '(' param ')'

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 4 (decl)
    $default  reduce using rule 13 (static)

    programa   go to state 2
    decl       go to state 3
    varglobal  go to state 4
    tipo       go to state 5
    static     go to state 6
    func       go to state 7
    cabecalho  go to state 8


State 1

   12 static: TK_PR_STATIC .

    $default  reduce using rule 12 (static)


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 9


State 3

    1 programa: decl .

    $default  reduce using rule 1 (programa)


State 4

    2 decl: . varglobal decl
    2     | varglobal . decl
    3     | . func decl
    4     | . %empty  [$end]
    5 varglobal: . tipo TK_IDENTIFICADOR lista
    6          | . tipo TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'
    7 tipo: . static TK_PR_BOOL
    8     | . static TK_PR_CHAR
    9     | . static TK_PR_FLOAT
   10     | . static TK_PR_INT
   11     | . static TK_PR_STRING
   12 static: . TK_PR_STATIC
   13       | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING]
   16 func: . cabecalho corpo
   17 cabecalho: . tipo TK_IDENTIFICADOR '(' param ')'

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 4 (decl)
    $default  reduce using rule 13 (static)

    decl       go to state 10
    varglobal  go to state 4
    tipo       go to state 5
    static     go to state 6
    func       go to state 7
    cabecalho  go to state 8


State 5

    5 varglobal: tipo . TK_IDENTIFICADOR lista
    6          | tipo . TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'
   17 cabecalho: tipo . TK_IDENTIFICADOR '(' param ')'

    TK_IDENTIFICADOR  shift, and go to state 11


State 6

    7 tipo: static . TK_PR_BOOL
    8     | static . TK_PR_CHAR
    9     | static . TK_PR_FLOAT
   10     | static . TK_PR_INT
   11     | static . TK_PR_STRING

    TK_PR_INT     shift, and go to state 12
    TK_PR_FLOAT   shift, and go to state 13
    TK_PR_BOOL    shift, and go to state 14
    TK_PR_CHAR    shift, and go to state 15
    TK_PR_STRING  shift, and go to state 16


State 7

    2 decl: . varglobal decl
    3     | . func decl
    3     | func . decl
    4     | . %empty  [$end]
    5 varglobal: . tipo TK_IDENTIFICADOR lista
    6          | . tipo TK_IDENTIFICADOR '[' TK_LIT_INT ']' ';'
    7 tipo: . static TK_PR_BOOL
    8     | . static TK_PR_CHAR
    9     | . static TK_PR_FLOAT
   10     | . static TK_PR_INT
   11     | . static TK_PR_STRING
   12 static: . TK_PR_STATIC
   13       | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING]
   16 func: . cabecalho corpo
   17 cabecalho: . tipo TK_IDENTIFICADOR '(' param ')'

    TK_PR_STATIC  shift, and go to state 1

    $end      reduce using rule 4 (decl)
    $default  reduce using rule 13 (static)

    decl       go to state 17
    varglobal  go to state 4
    tipo       go to state 5
    static     go to state 6
    func       go to state 7
    cabecalho  go to state 8


State 8

   16 func: cabecalho . corpo
   24 corpo: . '{' comando '}'

    '{'  shift, and go to state 18

    corpo  go to state 19


State 9

    0 $accept: programa $end .

    $default  accept


State 10

    2 decl: varglobal decl .

    $default  reduce using rule 2 (decl)


State 11

    5 varglobal: tipo TK_IDENTIFICADOR . lista
    6          | tipo TK_IDENTIFICADOR . '[' TK_LIT_INT ']' ';'
   14 lista: . ',' TK_IDENTIFICADOR lista
   15      | . ';'
   17 cabecalho: tipo TK_IDENTIFICADOR . '(' param ')'

    '['  shift, and go to state 20
    ';'  shift, and go to state 21
    ','  shift, and go to state 22
    '('  shift, and go to state 23

    lista  go to state 24


State 12

   10 tipo: static TK_PR_INT .

    $default  reduce using rule 10 (tipo)


State 13

    9 tipo: static TK_PR_FLOAT .

    $default  reduce using rule 9 (tipo)


State 14

    7 tipo: static TK_PR_BOOL .

    $default  reduce using rule 7 (tipo)


State 15

    8 tipo: static TK_PR_CHAR .

    $default  reduce using rule 8 (tipo)


State 16

   11 tipo: static TK_PR_STRING .

    $default  reduce using rule 11 (tipo)


State 17

    3 decl: func decl .

    $default  reduce using rule 3 (decl)


State 18

   12 static: . TK_PR_STATIC
   13       | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING, TK_PR_CONST]
   24 corpo: . '{' comando '}'
   24      | '{' . comando '}'
   25 comando: . varlocal ';' comando
   26        | . TK_IDENTIFICADOR '=' expr ';' comando
   27        | . TK_IDENTIFICADOR '[' expr ']' '=' expr ';' comando
   28        | . TK_PR_RETURN expr ';' comando
   29        | . TK_PR_INPUT TK_IDENTIFICADOR ';' comando
   30        | . TK_PR_OUTPUT saida ';' comando
   31        | . shift ';' comando
   32        | . TK_IDENTIFICADOR '(' expr ')' ';'
   33        | . TK_PR_BREAK ';' comando
   34        | . TK_PR_CONTINUE ';'
   35        | . fluxo ';' comando
   36        | . corpo ';' comando
   37        | . %empty  ['}']
   38 varlocal: . static const tipo2 TK_IDENTIFICADOR lista_varlocal
   39         | . static const tipo2 TK_IDENTIFICADOR '<' '=' TK_IDENTIFICADOR
   40         | . static const tipo2 TK_IDENTIFICADOR '<' '=' lit
   50 shift: . TK_IDENTIFICADOR TK_OC_SR TK_LIT_INT
   51      | . TK_IDENTIFICADOR '[' expr ']' TK_OC_SR TK_LIT_INT
   52      | . TK_IDENTIFICADOR TK_OC_SL TK_LIT_INT
   53      | . TK_IDENTIFICADOR '[' expr ']' TK_OC_SL TK_LIT_INT
   54 fluxo: . TK_PR_IF '(' expr ')' corpo
   55      | . TK_PR_IF '(' expr ')' corpo TK_PR_ELSE corpo
   56      | . TK_PR_FOR '(' atrib_for ':' expr ':' atrib_for ')' corpo
   57      | . TK_PR_WHILE '(' expr ')' TK_PR_DO corpo

    TK_PR_IF          shift, and go to state 25
    TK_PR_WHILE       shift, and go to state 26
    TK_PR_INPUT       shift, and go to state 27
    TK_PR_OUTPUT      shift, and go to state 28
    TK_PR_RETURN      shift, and go to state 29
    TK_PR_STATIC      shift, and go to state 1
    TK_PR_FOR         shift, and go to state 30
    TK_PR_BREAK       shift, and go to state 31
    TK_PR_CONTINUE    shift, and go to state 32
    TK_IDENTIFICADOR  shift, and go to state 33
    '{'               shift, and go to state 18

    '}'       reduce using rule 37 (comando)
    $default  reduce using rule 13 (static)

    static    go to state 34
    corpo     go to state 35
    comando   go to state 36
    varlocal  go to state 37
    shift     go to state 38
    fluxo     go to state 39


State 19

   16 func: cabecalho corpo .

    $default  reduce using rule 16 (func)


State 20

    6 varglobal: tipo TK_IDENTIFICADOR '[' . TK_LIT_INT ']' ';'

    TK_LIT_INT  shift, and go to state 40


State 21

   15 lista: ';' .

    $default  reduce using rule 15 (lista)


State 22

   14 lista: ',' . TK_IDENTIFICADOR lista

    TK_IDENTIFICADOR  shift, and go to state 41


State 23

   17 cabecalho: tipo TK_IDENTIFICADOR '(' . param ')'
   18 param: . const tipo TK_IDENTIFICADOR lista_parametros
   19      | . %empty  [')']
   22 const: . TK_PR_CONST
   23      | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING, TK_PR_STATIC]

    TK_PR_CONST  shift, and go to state 42

    ')'       reduce using rule 19 (param)
    $default  reduce using rule 23 (const)

    param  go to state 43
    const  go to state 44


State 24

    5 varglobal: tipo TK_IDENTIFICADOR lista .

    $default  reduce using rule 5 (varglobal)


State 25

   54 fluxo: TK_PR_IF . '(' expr ')' corpo
   55      | TK_PR_IF . '(' expr ')' corpo TK_PR_ELSE corpo

    '('  shift, and go to state 45


State 26

   57 fluxo: TK_PR_WHILE . '(' expr ')' TK_PR_DO corpo

    '('  shift, and go to state 46


State 27

   29 comando: TK_PR_INPUT . TK_IDENTIFICADOR ';' comando

    TK_IDENTIFICADOR  shift, and go to state 47


State 28

   30 comando: TK_PR_OUTPUT . saida ';' comando
   48 saida: . TK_IDENTIFICADOR
   49      | . lit
   91 lit: . TK_LIT_INT
   92    | . TK_LIT_FLOAT
   93    | . TK_LIT_FALSE
   94    | . TK_LIT_TRUE
   95    | . TK_LIT_CHAR
   96    | . TK_LIT_STRING

    TK_LIT_INT        shift, and go to state 48
    TK_LIT_FLOAT      shift, and go to state 49
    TK_LIT_FALSE      shift, and go to state 50
    TK_LIT_TRUE       shift, and go to state 51
    TK_LIT_CHAR       shift, and go to state 52
    TK_LIT_STRING     shift, and go to state 53
    TK_IDENTIFICADOR  shift, and go to state 54

    saida  go to state 55
    lit    go to state 56


State 29

   28 comando: TK_PR_RETURN . expr ';' comando
   59 expr: . TK_IDENTIFICADOR
   60     | . TK_IDENTIFICADOR '[' expr ']'
   61     | . lit_num
   62     | . TK_IDENTIFICADOR '(' expr_pr ')'
   63     | . '(' expr ')'
   64     | . bool
   65     | . '+' expr
   66     | . '-' expr
   67     | . '!' expr
   68     | . '&' expr
   69     | . '*' expr
   70     | . '#' expr
   71     | . expr '+' expr
   72     | . expr '-' expr
   73     | . expr '*' expr
   74     | . expr '/' expr
   75     | . expr '%' expr
   76     | . expr '<' expr
   77     | . expr '>' expr
   78     | . expr '|' expr
   79     | . expr '&' expr
   80     | . expr '^' expr
   81     | . expr TK_OC_OR expr
   82     | . expr TK_OC_AND expr
   83     | . expr TK_OC_LE expr
   84     | . expr TK_OC_GE expr
   85     | . expr TK_OC_EQ expr
   86     | . expr TK_OC_NE expr
   87     | . expr '?' expr ':' expr
   97 lit_num: . TK_LIT_INT
   98        | . TK_LIT_FLOAT
   99 bool: . TK_LIT_TRUE
  100     | . TK_LIT_FALSE

    TK_LIT_INT        shift, and go to state 57
    TK_LIT_FLOAT      shift, and go to state 58
    TK_LIT_FALSE      shift, and go to state 59
    TK_LIT_TRUE       shift, and go to state 60
    TK_IDENTIFICADOR  shift, and go to state 61
    '+'               shift, and go to state 62
    '-'               shift, and go to state 63
    '&'               shift, and go to state 64
    '#'               shift, and go to state 65
    '*'               shift, and go to state 66
    '('               shift, and go to state 67
    '!'               shift, and go to state 68

    expr     go to state 69
    lit_num  go to state 70
    bool     go to state 71


State 30

   56 fluxo: TK_PR_FOR . '(' atrib_for ':' expr ':' atrib_for ')' corpo

    '('  shift, and go to state 72


State 31

   33 comando: TK_PR_BREAK . ';' comando

    ';'  shift, and go to state 73


State 32

   34 comando: TK_PR_CONTINUE . ';'

    ';'  shift, and go to state 74


State 33

   26 comando: TK_IDENTIFICADOR . '=' expr ';' comando
   27        | TK_IDENTIFICADOR . '[' expr ']' '=' expr ';' comando
   32        | TK_IDENTIFICADOR . '(' expr ')' ';'
   50 shift: TK_IDENTIFICADOR . TK_OC_SR TK_LIT_INT
   51      | TK_IDENTIFICADOR . '[' expr ']' TK_OC_SR TK_LIT_INT
   52      | TK_IDENTIFICADOR . TK_OC_SL TK_LIT_INT
   53      | TK_IDENTIFICADOR . '[' expr ']' TK_OC_SL TK_LIT_INT

    TK_OC_SL  shift, and go to state 75
    TK_OC_SR  shift, and go to state 76
    '='       shift, and go to state 77
    '['       shift, and go to state 78
    '('       shift, and go to state 79


State 34

   22 const: . TK_PR_CONST
   23      | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING]
   38 varlocal: static . const tipo2 TK_IDENTIFICADOR lista_varlocal
   39         | static . const tipo2 TK_IDENTIFICADOR '<' '=' TK_IDENTIFICADOR
   40         | static . const tipo2 TK_IDENTIFICADOR '<' '=' lit

    TK_PR_CONST  shift, and go to state 42

    $default  reduce using rule 23 (const)

    const  go to state 80


State 35

   36 comando: corpo . ';' comando

    ';'  shift, and go to state 81


State 36

   24 corpo: '{' comando . '}'

    '}'  shift, and go to state 82


State 37

   25 comando: varlocal . ';' comando

    ';'  shift, and go to state 83


State 38

   31 comando: shift . ';' comando

    ';'  shift, and go to state 84


State 39

   35 comando: fluxo . ';' comando

    ';'  shift, and go to state 85


State 40

    6 varglobal: tipo TK_IDENTIFICADOR '[' TK_LIT_INT . ']' ';'

    ']'  shift, and go to state 86


State 41

   14 lista: . ',' TK_IDENTIFICADOR lista
   14      | ',' TK_IDENTIFICADOR . lista
   15      | . ';'

    ';'  shift, and go to state 21
    ','  shift, and go to state 22

    lista  go to state 87


State 42

   22 const: TK_PR_CONST .

    $default  reduce using rule 22 (const)


State 43

   17 cabecalho: tipo TK_IDENTIFICADOR '(' param . ')'

    ')'  shift, and go to state 88


State 44

    7 tipo: . static TK_PR_BOOL
    8     | . static TK_PR_CHAR
    9     | . static TK_PR_FLOAT
   10     | . static TK_PR_INT
   11     | . static TK_PR_STRING
   12 static: . TK_PR_STATIC
   13       | . %empty  [TK_PR_INT, TK_PR_FLOAT, TK_PR_BOOL, TK_PR_CHAR, TK_PR_STRING]
   18 param: const . tipo TK_IDENTIFICADOR lista_parametros

    TK_PR_STATIC  shift, and go to state 1

    $default  reduce using rule 13 (static)

    tipo    go to state 89
    static  go to state 6


State 45

   54 fluxo: TK_PR_IF '(' . expr ')' corpo
   55      | TK_PR_IF '(' . expr ')' corpo TK_PR_ELSE corpo
   59 expr: . TK_IDENTIFICADOR
   60     | . TK_IDENTIFICADOR '[' expr ']'
   61     | . lit_num
   62     | . TK_IDENTIFICADOR '(' expr_pr ')'
   63     | . '(' expr ')'
   64     | . bool
   65     | . '+' expr
   66     | . '-' expr
   67     | . '!' expr
   68     | . '&' expr
   69     | . '*' expr
   70     | . '#' expr
   71     | . expr '+' expr
   72     | . expr '-' expr
   73     | . expr '*' expr
   74     | . expr '/' expr
   75     | . expr '%' expr
   76     | . expr '<' expr
   77     | . expr '>' expr
   78     | . expr '|' expr
   79     | . expr '&' expr
   80     | . expr '^' expr
   81     | . expr TK_OC_OR expr
   82     | . expr TK_OC_AND expr
   83     | . expr TK_OC_LE expr
   84     | . expr TK_OC_GE expr
   85     | . expr TK_OC_EQ expr
   86     | . expr TK_OC_NE expr
   87     | . expr '?' expr ':' expr
   97 lit_num: . TK_LIT_INT
   98        | . TK_LIT_FLOAT
   99 bool: . TK_LIT_TRUE
  100     | . TK_LIT_FALSE

    TK_LIT_INT        shift, and go to state 57
    TK_LIT_FLOAT      shift, and go to state 58
    TK_LIT_FALSE      shift, and go to state 59
    TK_LIT_TRUE       shift, and go to state 60
    TK_IDENTIFICADOR  shift, and go to state 61
    '+'               shift, and go to state 62
    '-'               shift, and go to state 63
    '&'               shift, and go to state 64
    '#'               shift, and go to state 65
    '*'               shift, and go to state 66
    '('               shift, and go to state 67
    '!'               shift, and go to state 68

    expr     go to state 90
    lit_num  go to state 70
    bool     go to state 71


State 46
